[package]
name = "volumetrik"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.0"
rfd = "0.14"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
sysinfo = "0.37.2"
