[package]
name = "volumetrik"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.0"
rfd = "0.14"
egui_extras = "0.29.1"
egui_plot = "0.29.0"
image = "0.25.9"

[build-dependencies]
winres = "0.1"
